--- a/scss/components/_countdown.scss
+++ b/scss/components/_countdown.scss
@@ -1,16 +1,17 @@
 .countdown {
     display: flex;
-    justify-content: space-evenly;
+    justify-content: center;
     
     @include media-md {
         margin: auto;
-        max-width: toRem(448);
+        max-width: toRem(500);
     }
 
     .timer-card {
         width: toRem(72);
         height: toRem(92);
         border-radius: 4px;
+        margin-right: toRem(16);
         background-color: hsla(228, 22%, 26%, 1);
         color: white;
         text-align: center;
